<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cutebg2"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.admin.coffeeapp.MainActivity">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Client Name"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="@android:color/white"
            android:textStyle="normal|bold" />

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@android:color/background_light" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>


    <TextView
        style="@style/HeaderTextStyle"
        android:text="@string/toppings"
        android:textColor="@android:color/white"
        android:textStyle="normal|bold"
        android:layout_below="@+id/name_field"
        android:layout_toRightOf="@+id/whipped_cream_checkbox"
        android:layout_toEndOf="@+id/whipped_cream_checkbox" />

    <CheckBox
        android:id="@+id/whipped_cream_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:text="@string/whipped_cream"
        android:textSize="16sp"
        android:layout_above="@+id/nutella_checkbox"
        android:layout_alignLeft="@+id/mint_checkbox"
        android:layout_alignStart="@+id/mint_checkbox"
        android:textColor="@android:color/background_light" />

    <CheckBox
        android:id="@+id/chocolate_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:text="@string/chocolate"
        android:textSize="16sp"
        android:layout_above="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="19dp"
        android:textColor="@android:color/background_light" />


    <CheckBox
            android:id="@+id/nutella_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="Nutella"
            android:textSize="16sp"
        android:layout_above="@+id/mint_checkbox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="11dp"
        android:textColor="@android:color/background_light" />

    <CheckBox
        android:id="@+id/mint_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:text="Mint"
        android:textSize="16sp"
        android:layout_above="@+id/chocolate_checkbox"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:textColor="@android:color/background_light" />





    <TextView
        style="@style/HeaderTextStyle"
        android:text="@string/quantity"
        android:id="@+id/textView"
        android:textColor="@android:color/white"
        android:textStyle="normal|bold"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/linearLayout"
        android:layout_alignStart="@+id/linearLayout" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button">

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="decrement"
            android:text="-"
            android:background="@drawable/button_style"
            android:id="@+id/button2"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/initial_quantity_value"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="normal|bold" />

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="increment"
            android:text="+"
            android:background="@drawable/button_style"
            android:textSize="18sp"
            android:textStyle="normal|bold" />

    </LinearLayout>


    <Button
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:onClick="submitOrder"
        android:background="@drawable/btnss"
        android:id="@+id/button"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</LinearLayout>
